# SkillAnything

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: client.ts
frontend/src/stores/: workbench.ts
frontend/src/styles/: index.css  tokens.css
scripts/: run_image_ocr_batches.py
skillanything/: __init__.py  cli.py  config.py  ir.py  media_archive.py  models.py  pipeline.py  qa.py  utils.py  web.py
skillanything/connectors/: __init__.py  base.py  file.py  http.py  registry.py  rsshub.py  web.py  x.py  xiaohongshu.py  xueqiu.py
skillanything/distill/: __init__.py  distiller.py  pipeline.py  planner.py
skillanything/extract/: multimodal.py  text.py
skillanything/package/: __init__.py  writer.py
skillanything/package/exporters/: __init__.py  base.py
skillanything/sources/: __init__.py  adapters.py  base.py
skillanything/storage/: archive.py  repository.py
tests/: test_distillation_planner.py  test_ir_packaging.py  test_pipeline.py
