[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillanything-local"
version = "0.1.0"
description = "Local-first multimodal profile distillation into agent-ready Skill packages."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "SkillAnything Contributors" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.8.0",
  "openai>=1.40.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.46.0"]
media = ["openai-whisper>=20231117"]
vector = ["lancedb>=0.14.0"]
dev = ["pytest>=8.2.0", "ruff>=0.6.0"]

[project.scripts]
sa = "skillanything.cli:app"
skillanything = "skillanything.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["skillanything"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
